疯狂修锅: fix style of navbar(especially menu), details and card title; add style of scrollbar; add keys of tags and tocItems; fix line height of content and code;

--- a/src/other/css/layui.css
+++ b/src/other/css/layui.css
@@ -27,11 +27,11 @@ h1, h2, h3, h4, h5, h6 {
 .layui-breadcrumb, .layui-tree-btnGroup {
     visibility: hidden
 }
-blockquote, body, button, dd, div, dl, dt, form, h1, h2, h3, h4, h5, h6, input, li, ol, p, pre, td, textarea, th, ul {
+/*blockquote, body, button, dd, div, dl, dt, form, h1, h2, h3, h4, h5, h6, input, li, ol, p, pre, td, textarea, th, ul {
     margin: 0;
     padding: 0;
     -webkit-tap-highlight-color: rgba(0,0,0,0)
-}
+}*/
 a:active, a:hover {
     outline: 0
 }
